# origin

./: .gitignore  .gitignore_global  Makefile.am  Makefile.in  MpcExEventQuality.C  MpcExEventQuality.h  MpcExHitMap.C  MpcExHitMap.h  MpcExQualityCut.h  MpcExSpin.h  MyMpcExLinkDef.h  README.md  TMpcExLShower.C  TMpcExLShowerContainer.C  UpLoadCVS.sh  configure  configure.in  mMpcExApplyMyCalibrations.C  mMpcExApplyMyCalibrations.h  mMpcExAuAuAna.C  mMpcExAuAuAna.h  mMpcExCreateTree.C  mMpcExDataAna.C  mMpcExDataAna.h  mMpcExLShower.C  mMpcExLShower.h  mMpcExLoadCalibrations.C  mMpcExLoadMyCalibrations.C  mMpcExMakeEventQuality.C  mMpcExMyShower.C  mMpcExPi0Reco.C  mMpcExPi0Reco.h  setup.csh
CVS/: Entries  Repository
autom4te.cache/: output.0  output.1  traces.0  traces.1
backup/: MpcExHitMap.h  MpcExSpin.C  mMpcExMyShower_v0.C  mMpcExMyShower_v1.C  mMpcExMyShower_v2.C  mMpcExMyShower_v2.h  mMpcExMyShower_v3.C  mMpcExMyShower_v3.h  mMpcExMyShower_v4.C
macro/: DataAna_Mpc_triger-448911.root  Fun4All_MpcExDataAna.C  MpcExMapper.csv  MpcExNxNyCheck.C  Mpc_tower_e_arm0.ps  Mpc_tower_e_arm1.ps  draw_mpc_tower.C  mpcex_compare_high.root  mpcex_compare_low.root  out.txt  output_mpcex.root  output_mpcex_high.root  output_mpcex_high_layer.root  output_mpcex_high_low.root  output_mpcex_layer.root  output_mpcex_layers_dead_hot.root  output_mpcex_layers_low_dead_hot.root  output_mpcex_layers_normal.root  output_mpcex_low_layer_even.root  output_mpcex_low_layer_odd.root  readroot_mpc.C  readroot_mpc_bk.C  readroot_mpcex.C  readroot_mpcex_comine_layers.C  readroot_mpcex_compare.C  (+3 more)
(+46 files in other folders)
